@@ -358,7 +358,7 @@ end
 ---@param bufnr integer buffer number
 ---@param client_id? integer Client ID to refresh (default: all clients)
 ---@param only_visible? boolean Whether to only refresh for the visible regions of the buffer (default: false)
-local function refresh(bufnr, client_id, only_visible)
+function M._refresh(bufnr, client_id, only_visible)
   if
     only_visible
     and vim.iter(api.nvim_list_wins()):all(function(window)
@@ -407,7 +407,7 @@ function M.on_refresh(err, _, ctx)
   else
     for bufnr in pairs(client.attached_buffers or {}) do
       if bufstates[bufnr] and bufstates[bufnr].pull_kind == 'document' then
-        refresh(bufnr)
+        M._refresh(bufnr)
       end
     end
   end
@@ -442,7 +442,7 @@ function M._enable(bufnr)
       end
       if bufstates[bufnr] and bufstates[bufnr].pull_kind == 'document' then
         local client_id = opts.data.client_id --- @type integer?
-        refresh(bufnr, client_id, true)
+        M._refresh(bufnr, client_id, true)
       end
     end,
     group = augroup,
@@ -451,7 +451,7 @@ function M._enable(bufnr)
   api.nvim_buf_attach(bufnr, false, {
     on_reload = function()
       if bufstates[bufnr] and bufstates[bufnr].pull_kind == 'document' then
-        refresh(bufnr)
+        M._refresh(bufnr)
       end
     end,
     on_detach = function()
